--- a/styles.css
+++ b/styles.css
@@ -136,22 +136,35 @@ th {
     position: sticky;
     top: 0;
     z-index: 2;
+    height: 140px;
 }
 
 .corner-header {
     padding: 8px 4px;
     text-align: center;
+    left: calc(50% - .5rem);
+    line-height: 1;
+    padding-top: .5rem;
+    position: relative;
+    text-orientation: sideways;
+    transform: rotate(180deg);
+    white-space: nowrap;
+    writing-mode: vertical-rl;
+}
+
+/* First header cell (corner) */
+th:first-child {
+    z-index: 3;
+    height: auto;
+    writing-mode: horizontal-tb;
+    transform: none;
+    text-orientation: mixed;
 }
 
 .corner-text {
     display: inline-block;
     text-align: center;
     line-height: 1.2;
-}
-
-/* First header cell (corner) */
-th:first-child {
-    z-index: 3;
 }
 
 tr:nth-child(even) {
